# isokl_steering_calibration

./: .gitignore  AGENTS.md  README.md  README_long.md  justfile  pyproject.toml
_single_run_264/: Qwen3.5-0.8B_mean_diff_s0_w512
docs/papers/: 2602.02712_taimeskhanov_steering_strength.md
docs/reviews/: comprehension_check_readme_v1.json
docs/spec/: 20260505_iso_kl_figure.md
figs/: table.csv  table.md
figs/figs_partial/: table.csv  table.md
figs/figs_qwen05_kl_long/: table.md
figs/figs_qwen05_spaghetti2/: table.csv
figs/figs_qwen05_survival/: survival.md  survival_pmass.md
figs/figs_qwen05_w50_survival/: survival_pmass.md
figs/figs_qwen05_w512_color/: table.csv  table.md
figs/figs_qwen05_w512_kl_alive/: kl_alive_summary.md
figs/figs_qwen05_w512_survival/: survival_kl.md  survival_pmass_eval.md
figs/figs_qwen05_w512_survival_v2/: survival_pmass_eval.md
figs_single264/: table.csv
figs_single264_kl_alive_095_smooth/: kl_alive_summary.md
figs_single264_survival/: survival_pmass_eval.md
figs_single264_survival_095/: survival_pmass_eval.md
outputs_qwen35_w512_dense/Qwen3.5-0.8B_mean_diff_s0_w512_dense/: calib.json  pmass.json  results.csv  trajectory.json
outputs_qwen35_w512_dense/_Qwen3.5-0.8B_mean_diff_s0_w512_dense_single/: Qwen3.5-0.8B_mean_diff_s0_w512_dense
outputs_qwen35_w512_v3/Qwen3.5-0.8B_directional_ablation_s0_w512/: calib.json
scripts/: _debug_pmass.py  aggregate.py  audit_pmass.py  queue_sweep.sh  render_run_figs.py  run_cell.py  spaghetti_kl_alive.py  survival.py  sweep.sh
tests/: test_smoke.py
(+27 files in other folders)
